--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
             <li class="text-lg font-bold md:text-xl">
                 Section One: HyperText Markup Language (HTML)
                 <ul class="ps-5 mt-2 space-y-1 list-disc list-inside text-sm font-medium">
-                    <li><a href="#" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Nested navigation in UIs is a bad idea too</a></li>
-                    <li><a href="#" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Nested navigation in UIs is a bad idea too</a> (Recommended)</li>
+                    <li><a href="https://www.w3schools.com/html/html_intro.asp" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">
+                        HTML introduction</a> (Recommended)</li>
+                    <li>
+                        <a href="#" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">
+                            HTML Elements</a> (Recommended)</li>
                 </ul>
             </li>
 
