testing my branch

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
             <li class="pt-10 text-lg font-bold md:text-xl">
                 Section One: TailwindCSS
                 <ul class="ps-5 mt-2 space-y-1 list-disc list-inside text-sm font-medium">
+                    <li><a href="https://play.tailwindcss.com/" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Tailwindcss playground</a></li>
                     <li><a href="https://tailwindcss.com/docs/installation" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">TailwindCSS Installation guide</a> (Recommended)</li>
-                    <li><a href="#" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Nested navigation in UIs is a bad idea too</a> (Recommended)</li>
+                    <li><a href="https://flowbite.com/blocks/" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Flowbite blocks (Components)</a></li>
                 </ul>
             </li>
 
