--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </li>
 
             <li class="pt-10 text-lg font-bold md:text-xl">
-                Section One: Cascading stylesheet (CSS)
+                Section two: Cascading stylesheet (CSS)
                 <ul class="ps-5 mt-2 space-y-1 list-disc list-inside text-sm font-medium">
                     <li><a href="#" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Nested navigation in UIs is a bad idea too</a></li>
                     <li><a href="#" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Nested navigation in UIs is a bad idea too</a> (Recommended)</li>
@@ -44,19 +44,28 @@
             </li>
 
             <li class="pt-10 text-lg font-bold md:text-xl">
-                Section One: TailwindCSS
+                Section Three: TailwindCSS
                 <ul class="ps-5 mt-2 space-y-1 list-disc list-inside text-sm font-medium">
                     <li><a href="https://play.tailwindcss.com/" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Tailwindcss playground</a></li>
                     <li><a href="https://tailwindcss.com/docs/installation" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">TailwindCSS Installation guide</a> (Recommended)</li>
                     <li><a href="https://flowbite.com/blocks/" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Flowbite blocks (Components)</a></li>
+                    <li><a href="https://boxicons.com/" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Boxicons (Icons)</a></li>
+                    <li><a href="https://youtu.be/dFgzHOX84xQ?si=Ie1mWh8JlHvrFS-x" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Course to take</a> (Recommended)</li>
                 </ul>
             </li>
 
             <li class="pt-10 text-lg font-bold md:text-xl">
-                Section One: Javascript (js)
+                Section Four: Javascript (js)
                 <ul class="ps-5 mt-2 space-y-1 list-disc list-inside text-sm font-medium">
-                    <li><a href="#" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Nested navigation in UIs is a bad idea too</a></li>
-                    <li><a href="#" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Nested navigation in UIs is a bad idea too</a> (Recommended)</li>
+                    <li><a href="https://www.w3schools.com/js/default.asp" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Javascript basics</a> (Recommended)</li>
+                </ul>
+            </li>
+            <li class="pt-10 text-lg font-bold md:text-xl">
+                Section Fifth: Communities
+                <ul class="ps-5 mt-2 space-y-1 list-disc list-inside text-sm font-medium">
+                    <li><a href="https://stackoverflow.com/" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">stackoverflow</a> (Recommended)</li>
+                    <li><a href="https://chat.whatsapp.com/GV4NALRaDtn5wVOX34O4zi" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">DevXP CodeCrafters</a> (WhatsApp Group)</li>
+                    <li><a href="https://chat.whatsapp.com/BY8mLdHaD81BqpgCmwumbU" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Developers of value - DOV</a> (WhatsApp Group)</li>
                 </ul>
             </li>
         </ol>
