--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         </a>
         <div class="flex items-center space-x-6 rtl:space-x-reverse">
           <a
-            href="tel:5541251234"
+            href="https://www.instagram.com/blac_rays/"
             class="text-lg text-gray-500 dark:text-white hover:text-blue-500"
             >Victory</a
           >
           <a
-            href="tel:5541251234"
+            href="https://www.instagram.com/nienge_david/"
             class="text-lg text-gray-500 dark:text-white hover:text-blue-500"
             >David</a
           >
