--- a/index.html
+++ b/index.html
@@ -189,11 +189,20 @@
         </li>
 
         <li class="pt-10 text-lg font-bold md:text-xl">
-            Section Fifth: Communities
+            Section Five: Communities
             <ul class="ps-5 mt-2 space-y-1 list-disc list-inside text-sm font-medium">
                 <li><a href="https://stackoverflow.com/" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">stackoverflow</a> (Recommended)</li>
                 <li><a href="https://chat.whatsapp.com/GV4NALRaDtn5wVOX34O4zi" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">DevXP CodeCrafters</a> (WhatsApp Group)</li>
                 <li><a href="https://chat.whatsapp.com/BY8mLdHaD81BqpgCmwumbU" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Developers of value - DOV</a> (WhatsApp Group)</li>
+            </ul>
+        </li>
+
+        <li class="pt-10 text-lg font-bold md:text-xl">
+            Section Six: Recommended ELearning Platforms
+            <ul class="ps-5 mt-2 space-y-1 list-disc list-inside text-sm font-medium">
+                <li><a href="https://www.udemy.com/" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Udemy</a> (Recommended)</li>
+                <li><a href="https://www.coursera.org/" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">Coursera</a></li>
+                <li><a href="https://www.linkedin.com/learning/" class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]">LinkedIn Learn</a></li>
             </ul>
         </li>
       </ol>
