added portfolio link

--- a/index.html
+++ b/index.html
@@ -154,6 +154,14 @@
                   >Scrimba course on CSS</a
                 > (Recommended)
               </li>
+               
+              <li>
+                <a
+                  href="https://github.com/Anyanwu-victory/KDF-Web-Workshop"
+                  class="text-sm text-orange-500 font-medium hover:text-orange-700 md:text-[16px]"
+                  >Portfolio</a
+                > (Try it yourself/github link-clone it)
+              </li>
              
               <li>
                 <a
