--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </li>
 
         <li class="pt-10 text-lg font-bold md:text-xl">
-            Section One: Cascading stylesheet (CSS)
+            Section Two: Cascading stylesheet (CSS)
             <ul
               class="ps-5 mt-2 space-y-1 list-disc list-inside text-sm font-medium"
             >
